[gd_scene load_steps=15 format=3 uid="uid://c75i61yyvkd1e"]

[ext_resource type="Script" path="res://scenes/games/pool_royale/scripts/pool_royale.gd" id="1_x1ler"]
[ext_resource type="FontFile" uid="uid://dd1r2fwpg8dya" path="res://shared/fonts/MPLUSCodeLatin-Medium.ttf" id="2_87d87"]
[ext_resource type="Texture2D" uid="uid://cgcns17rkoy3w" path="res://scenes/games/pool_royale/visuals/compass.png" id="2_t7ku6"]
[ext_resource type="FontFile" uid="uid://rmkjlvce4dyv" path="res://shared/fonts/MPLUSCodeLatin-Bold.ttf" id="3_2fwka"]
[ext_resource type="PackedScene" uid="uid://cowkp06pmwewa" path="res://scenes/games/pool_royale/bumper.tscn" id="3_x2hen"]
[ext_resource type="Script" path="res://scenes/games/cannon/countdown.gd" id="4_ilfop"]
[ext_resource type="PackedScene" uid="uid://c8bdqqhg6e1u8" path="res://scenes/games/pool_royale/moving_object.tscn" id="6_5228q"]
[ext_resource type="PackedScene" uid="uid://d1ktqkqvqmhyd" path="res://scenes/ui/viewers_list.tscn" id="8_3hiv4"]
[ext_resource type="PackedScene" uid="uid://fmo8nhxqjycj" path="res://scenes/ui/navigate_to_menu_button.tscn" id="9_0kw1j"]

[sub_resource type="Gradient" id="Gradient_131dc"]
offsets = PackedFloat32Array(0.163347, 0.860558)
colors = PackedColorArray(3.65794e-06, 0.57621, 0.441327, 1, 5.65536e-07, 0.396844, 0.217027, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wkl7s"]
gradient = SubResource("Gradient_131dc")
width = 960
height = 540
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8bwd"]
size = Vector2(1442, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3ik3"]
size = Vector2(976, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5f53"]
size = Vector2(2698, 480)

[node name="PoolRoyale" type="Node2D"]
script = ExtResource("1_x1ler")

[node name="Background" type="TextureRect" parent="." groups=["Background"]]
offset_left = -120.0
offset_top = -32.0
offset_right = 2032.0
offset_bottom = 1112.0
texture = SubResource("GradientTexture2D_wkl7s")

[node name="Compass" type="Sprite2D" parent="." groups=["Background"]]
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(960, 540)
texture = ExtResource("2_t7ku6")

[node name="ViewerContainer" type="Node2D" parent="."]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(960, 32)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("RectangleShape2D_s8bwd")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D2"]
color = Color(0.533333, 0.262745, 0.0470588, 1)
polygon = PackedVector2Array(-720, -32, -720, 32, 720, 32, 720, -32)

[node name="Direction" type="Label" parent="StaticBody2D2"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "90"
horizontal_alignment = 1

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(960, 1049)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
shape = SubResource("RectangleShape2D_s8bwd")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D5"]
color = Color(0.533333, 0.262745, 0.0470588, 1)
polygon = PackedVector2Array(-720, -32, -720, 32, 720, 32, 720, -32)

[node name="Direction" type="Label" parent="StaticBody2D5"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "270"
horizontal_alignment = 1

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(1888, 540)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource("RectangleShape2D_m3ik3")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D3"]
color = Color(0.533333, 0.262745, 0.0470588, 1)
polygon = PackedVector2Array(-488, -32, -488, 32, 488, 32, 488, -32)

[node name="Direction" type="Label" parent="StaticBody2D3"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0001
offset_top = 24.0
offset_right = 19.9999
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "0"
horizontal_alignment = 1

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(31, 540)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource("RectangleShape2D_m3ik3")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D4"]
color = Color(0.533333, 0.262745, 0.0470588, 1)
polygon = PackedVector2Array(-488, -32, -488, 32, 488, 32, 488, -32)

[node name="Direction" type="Label" parent="StaticBody2D4"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = 31.0
offset_right = 35.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 41
text = "180"
horizontal_alignment = 1

[node name="Bumper" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(320, 768)

[node name="Bumper2" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(320, 320)

[node name="Bumper3" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(1600, 768)

[node name="Bumper4" parent="." instance=ExtResource("3_x2hen")]
position = Vector2(1600, 320)

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(959, -275)
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(959, 1354)
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(-359, 625)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n5f53")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(2276, 568)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n5f53")

[node name="MovingObject" parent="." instance=ExtResource("6_5228q")]
position = Vector2(760, 192)
speed = 2.0
metadata/_edit_group_ = true

[node name="RemoteTransform2D" parent="MovingObject/Path2D/PathFollow2D" index="0"]
remote_path = NodePath("../../../Bumper")

[node name="Bumper" parent="MovingObject" instance=ExtResource("3_x2hen")]

[node name="MovingObject2" parent="." instance=ExtResource("6_5228q")]
position = Vector2(1168, 896)
rotation = 3.14159
speed = 2.0
metadata/_edit_group_ = true

[node name="RemoteTransform2D" parent="MovingObject2/Path2D/PathFollow2D" index="0"]
remote_path = NodePath("../../../Bumper")

[node name="Bumper" parent="MovingObject2" instance=ExtResource("3_x2hen")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Waiting" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.5
offset_top = -30.0
offset_right = 362.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 61
text = "Waiting for players
Type !join to play"
horizontal_alignment = 1

[node name="Winner" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.5
offset_top = -30.0
offset_right = 362.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_87d87")
theme_override_font_sizes/font_size = 61
text = "Winner:"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -82.0
offset_right = 396.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(396, 165)
theme_override_fonts/font = ExtResource("3_2fwka")
theme_override_font_sizes/font_size = 131
text = "STARTS IN
10"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_ilfop")

[node name="ColorRect" type="ColorRect" parent="UI/Countdown"]
self_modulate = Color(0.054902, 0.054902, 0.054902, 0.662745)
show_behind_parent = true
layout_mode = 0
offset_left = -801.0
offset_top = -527.0
offset_right = 1667.0
offset_bottom = 876.0

[node name="WaitingList" type="VBoxContainer" parent="UI"]
offset_left = 1612.0
offset_top = 72.0
offset_right = 1853.0
offset_bottom = 1009.0

[node name="Label" type="Label" parent="UI/WaitingList"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Waiting"
horizontal_alignment = 2

[node name="ViewersList" parent="UI/WaitingList" instance=ExtResource("8_3hiv4")]
layout_direction = 3
layout_mode = 2
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 0.447059)
theme_override_font_sizes/font_size = 16
allow_search = false

[node name="DeadList" type="VBoxContainer" parent="UI"]
offset_left = 68.0
offset_top = 68.0
offset_right = 309.0
offset_bottom = 1005.0

[node name="Label" type="Label" parent="UI/DeadList"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dead"

[node name="ViewersList" parent="UI/DeadList" instance=ExtResource("8_3hiv4")]
layout_mode = 2
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 0.447059)
theme_override_font_sizes/font_size = 16
allow_search = false
list_type = 2

[node name="Overlay" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Overlay"]
layout_mode = 2

[node name="NavigateToMenuButton" parent="UI/Overlay/VBoxContainer" instance=ExtResource("9_0kw1j")]
layout_mode = 2

[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="finished" from="UI/Countdown" to="." method="_on_countdown_finished"]
[connection signal="scene_changing" from="UI/Overlay/VBoxContainer/NavigateToMenuButton" to="." method="_on_navigate_to_menu_button_scene_changing"]

[editable path="MovingObject"]
[editable path="MovingObject2"]
